--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -47,7 +47,7 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main"
+                <img style="height: 50px; border-radius: 50% !important;" class="user-logo-main"
                   src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
@@ -74,7 +74,7 @@
               </div>
 
             </div>
-            <div class="display-flex--row flex-align-center">
+            <div style="justify-content: space-between;" class="display-flex--row flex-align-center">
               <!-- <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
                 : '1.2-2' }} Miles away 
               </div> -->
@@ -84,17 +84,20 @@
               </div>
               <div class="action-list">
                 <!-- <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon> -->
-                <ion-icon name="human"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                [fromUserName]="user['DisplayName']"
+                [fromUserProfile]="'/' + user['ProfilePhoto']"
+                [userInfo]="user"></greeting-view>
                 <greeting-view [fromUserId]="user['UserId']"
                   [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"
                   [userInfo]="user"></greeting-view>
 
-                <div class="req-icon">
+                <!-- <div class="req-icon">
                   <ion-icon *ngIf="user['IsConnected'] === false"
                     name="free-user-request-white-icon"
                     style="font-size: 36px;" (click)="blockUser()"></ion-icon>
-                </div>
+                </div> -->
 
                 <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
