--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -34,7 +34,7 @@
 
 
       </div>
-      <div style="height: 100%;" *ngIf="userConnectionActive === true">
+      <div style="height: 100%; display: flex; flex-direction: column; justify-content: center; text-align: center; align-items: center;" *ngIf="userConnectionActive === true">
         <img src="../../../assets/icons/screen-wise-icons/Sonar icons/Sonar service not available icon.svg">
         <p>Sonar Service is not available</p>
       </div>
