--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -84,10 +84,8 @@
               </div>
               <div class="action-list">
                 <!-- <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon> -->
-                <greeting-view [fromUserId]="user['UserId']"
-                [fromUserName]="user['DisplayName']"
-                [fromUserProfile]="'/' + user['ProfilePhoto']"
-                [userInfo]="user"></greeting-view>
+             <ion-icon name='send-connection-sonar-icon' style="width: 35px;
+             height: 34px;"></ion-icon>
                 <greeting-view [fromUserId]="user['UserId']"
                   [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"
@@ -334,38 +332,42 @@
       <div slot="content">
         <div *ngFor="let user of salesListings;let i=index">
           <div class="lines-bottom ion-padding">
-            <div class="display-flex--row flex-align-center">
-              <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-                <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
-                  onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
-                  alt="User Profile"> -->
-                <img class="user-logo-main"
+            <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
+
+              <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
+                <p class="itemforsale">Car Crashe into tree</p>
+                <div>
+                  <p>There was a car crash on 26th street today when a car crashed into a tree at 9 AM...</p>
+                </div>
+                <div style="display: flex; gap: 5px; text-align: center; ">
+                  <p class="salesownername" style="margin-top: 10px; ">Luther Wilson</p>
+                  <p class="posteddate" >1 day ago</p>
+                </div>
+               
+                
+              </div>
+              
+              <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
+
+                <img style="--border-radius: 20% !important;" 
                   src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
-              <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
+            </div>
+
+            <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+              <div style="display: flex;">
+                <p class="miles">50 Miles Away</p>
+              </div>
+              <div style="display: flex; justify-content:center; align-items: center; ">
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                (click)="viewUserOnMap(user)"></ion-icon>  
               </div>
             </div>
-<!-- 
-            <div class="display-flex--row flex-align-center">
-             <div class="font-secoundry-text font-sz-12"
-                style="width: 100%;text-align: center;">{{user['RangeInKm']|
-                number
-                : '1.2-2' }} Miles away </div> -->
-              <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;"
-                  (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']"
-                  [fromUserName]="user['DisplayName']"
-                  [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;"
-                  (click)="blockUser()"></ion-icon>
-                <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
-              </div>
-            </div> 
+
           </div>
         </div>
+      </div>
     
     </ion-accordion>
 
@@ -404,7 +406,7 @@
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
                 <ion-icon name="chat-ignore" style="font-size: 36px;"
                   (click)="blockUser()"></ion-icon>
-                <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+                 <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
           </div>
@@ -461,6 +463,7 @@
     
     </ion-accordion>
 
+
     <!-- EVENTS -->
     <ion-accordion *ngIf="events.length> 0" value="events"
       toggleIcon="accordion-icon">
@@ -469,41 +472,70 @@
         <ion-label>Events ({{events.length}})</ion-label>
       </ion-item>
       <div slot="content">
+        <div *ngFor="let user of salesListings;let i=index">
+          <div class="lines-bottom ion-padding">
+            <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
+
+              <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
+                <p class="itemforsale">{{user['Title']}}</p>
+                <div>
+                  <p>{{user['Description']}}</p>
+                </div>
+                <div style="display: flex; gap: 5px; text-align: center; ">
+                  <p class="salesownername" style="margin-top: 10px; ">Luther Wilson</p>
+                  <p class="posteddate" >1 day ago</p>
+                </div>
+               
+                
+              </div>
+              <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
+
+                <img style="--border-radius: 20% !important;" 
+                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                  onError="this.src='assets/icons/business/anonymous.svg'" />
+              </ion-avatar>
+            </div>
+
+            <!-- <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+              <div style="display: flex;">
+                <p class="miles">50 Miles Away</p>
+              </div>
+              <div style="display: flex; justify-content:center; align-items: center; ">
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                (click)="viewUserOnMap(user)"></ion-icon>  
+              </div>
+            </div> -->
+
+          </div>
+        </div>
+      </div>
+      <!-- <div slot="content">
         <div *ngFor="let user of events;let i=index">
           <div class="lines-bottom ion-padding">
             <div class="display-flex--row flex-align-center">
               <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-                <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
-                  onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
-                  alt="User Profile"> -->
+                
                 <img class="user-logo-main"
                   src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
                 <h3 class="font-sz-14">{{user['Title']}}</h3>
-                <!-- <p>{{user['Description']}}</p> -->
+                <p>{{user['Description']}}</p>
               </div>
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <!-- <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
-                : '1.2-2' }} Miles away 
-              </div> -->
+              
               <div class="action-list">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                   (click)="viewUserOnMap(user)"></ion-icon>
-                <!-- <greeting-view [fromUserId]="user['UserId']"
-                  [fromUserName]="user['FirstName']"
-                  [fromUserProfile]="'/' + user['ProfilePhoto']">
-                </greeting-view> -->
-                <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
-                <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+               
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </ion-accordion>
   </ion-accordion-group>
   <!-- <div class="mapreslist">
