--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -92,13 +92,14 @@
             <span *ngIf="post.BelongsToNodeName" class="fi-freeUser-nameTag">
               {{post.BelongsToNodeName}}
             </span>
-            <div *ngIf="post.PostImages && post.PostImages.length>0" class="whiteBg">
+            <div  *ngIf="post.PostImages && post.PostImages.length>0" class="whiteBg">
               <ion-buttons *ngIf="post.PostImages.length>1">
                 <ion-button shape="round">
                   <ion-icon name="posting-multiple-picture"></ion-icon>
                 </ion-button>
               </ion-buttons>
-              <ion-img class="fi-img" [src]="appConstants.mediaPrefix + post.PostImages[0]"></ion-img>
+              <!-- <ion-img class="fi-img" [src]="appConstants.mediaPrefix + post.PostImages[0]" [ngStyle]="{'width': '177px', 'height': '177px', 'top':'508px', 'left':'23px','object-fit': 'cover', 'overflow': 'hidden'}" ></ion-img> -->
+              <ion-img class="fi-img" [src]="appConstants.mediaPrefix + post.PostImages[0]" [ngStyle]="{'width': '100%', 'height': '100%', 'object-fit': 'cover' ,'margin':'0px','padding':'0px'}"></ion-img>
             </div>
             <div class="ion-text-center postBg"
               *ngIf="post.PostImages && (post.PostImages.length==0 || post.PostImages.length>0 && post.PostImages[0]=='')">
