--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
@@ -2,7 +2,7 @@ ion-content {
 
   & ion-grid {
     background: rgba(234, 241, 244, 0.7);
-
+    padding: 12px;
     & ion-row {
       margin: 20px 0;
 
@@ -13,6 +13,9 @@ ion-content {
       & ion-col {
         //margin: 0 10px;
         overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         & ion-buttons {
           position: absolute;
@@ -22,8 +25,8 @@ ion-content {
 
         & div {
           object-fit: cover;
-          width: 100%;
-          height: 224px;
+          width: 177px;
+          height: 177px;
           border-radius: 11px;
           display: flex;
           justify-content: center;
@@ -184,7 +187,7 @@ ion-content {
     width: 100%;
     height: auto;
   }
-
+  
   ion-img::part(image) {
     object-fit: cover;
     border-radius: 10px;
@@ -354,6 +357,8 @@ ion-modal {
 
 .whiteBg{
   background-color: #ffffff !important;
+  width: 177px;
+  height: 177px;
 }
 
 .message {
