fixed traits thumbnail and post images

--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
@@ -16,6 +16,8 @@ ion-content {
         display: flex;
         justify-content: center;
         align-items: center;
+        // height: 177px;
+        // width: 177px;
 
         & ion-buttons {
           position: absolute;
@@ -185,7 +187,8 @@ ion-content {
   .fi-img {
     object-fit: cover;
     width: 100%;
-    height: auto;
+    height: 100%;
+    // height: auto;
   }
   
   ion-img::part(image) {
@@ -200,22 +203,37 @@ ion-content {
       object-fit: cover;
       border-radius: 22px;
     }
+
+    .fi-border-img{
+      object-fit: cover;
+      border-radius: 22px;
+    }
+  }
+
+  .fi-border-img{
+    object-fit: cover;
+    border-radius: 22px;
+    height: 100%;
+    width: 100%;
   }
 
   h3.fi-traitName {
     position: absolute;
-    top: 165px;
+    top: 117px;
     background: rgba(0, 0, 0, 0.4);
     height: 50px;
     color: white;
     display: flex;
-    width: 95%;
+    // width: 100%;
     justify-content: center;
     align-items: center;
-    border-bottom-left-radius: 22px;
-    border-bottom-right-radius: 22px;
+    // border-bottom-left-radius: 22px;
+    // border-bottom-right-radius: 22px;
     font: normal normal medium 16px/38px SF Pro Display;
     letter-spacing: 0.25px;
+    width: 177px;
+    border-bottom-left-radius: 22px;
+    border-bottom-right-radius: 22px;
   }
 
   .fi-no-result {
