--- a/src/app/pages/home/free-user-canvas/trait-section/trait-section.component.html
+++ b/src/app/pages/home/free-user-canvas/trait-section/trait-section.component.html
@@ -9,6 +9,13 @@
 </ion-header>
 
 <ion-content>
+  <ion-row class="gridBg">
+    <ion-col>
+      <div class="thumbnailBg">
+        <ion-img class ="thumbnail-img" [src] = "appConstants.mediaPrefix + userTraitWithPost.UserTrait.Thumbnail "></ion-img>
+      </div>
+    </ion-col>
+  </ion-row>
   <ion-grid *ngIf="loaded && userTraitWithPost.TraitPosts && userTraitWithPost.TraitPosts.length>0">
     <ion-row>
       <ion-col size="6" *ngFor="let post of userTraitWithPost.TraitPosts" (click)="openPostScreen(post)">
