--- a/src/app/pages/home/free-user-canvas/trait-section/trait-section.component.scss
+++ b/src/app/pages/home/free-user-canvas/trait-section/trait-section.component.scss
@@ -21,17 +21,25 @@ ion-title {
   letter-spacing: 0.32px;
   color: #285078;
 
+}
 
+
+ion-col{
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ion-content {
+
   & ion-grid {
     background: rgba(234, 241, 244, 0.7);
 
 
     & ion-row {
 
-      margin: 20px 0;
+      margin: 20px 0;      
 
       &:first-child {
         margin-top: 10px;
@@ -39,7 +47,7 @@ ion-content {
 
       & ion-col {
         //margin: 0 10px;
-        overflow: hidden;
+        
 
         & ion-buttons {
           position: absolute;
@@ -49,13 +57,13 @@ ion-content {
 
         & div {
           object-fit: cover;
-          width: 100%;
-          height: 224px;
+          width: 174px;
+          height: 174px;
           border-radius: 11px;
           display: flex;
           justify-content: center;
           flex-direction: column;
-
+          padding:0%;
           &::part(image) {
             border-radius: 11px;
           }
@@ -97,10 +105,43 @@ ion-content {
   }
 }
 
+ion-img::part(image) {
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 .postBg {
   background-color: #1976D2 !important;
 }
 
 .whiteBg{
   background-color: #ffffff !important;
+}
+
+.fi-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.thumbnail-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 22px;
+}
+
+.thumbnailBg {
+  object-fit: cover;
+  width: 370px;
+  height: 370px;
+  border-radius: 22px;
+  padding: 0%;
+}
+
+.gridBg {
+
+  background: rgba(234, 241, 244, 0.7);
+  padding: 0%;
 }
