--- a/src/app/pages/sidemenu/events/event-view/event-view.page.html
+++ b/src/app/pages/sidemenu/events/event-view/event-view.page.html
@@ -83,7 +83,7 @@
           <h4 style="font-size: 17px; color: #285078;">Viewable by</h4>
         </ion-text>
         <ion-text>
-          <p style="font-size: 17px; color: #1A3253;" class="ion-no-margin">{{event.VisibleTo}}</p>
+          <p style="font-size: 17px; color: #285078;" class="ion-no-margin">{{commonService.getPrivacyFullValue(event.VisibleTo)}}</p>
         </ion-text>
       </div>
     </ion-item>
