--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -34,7 +34,7 @@
     [value]="['user', 'business', 'nonprofit', 'donation', 'totems', 'salesListings', 'serviceAvailable', 'serviceRequired', 'events']">
 
     <!-- USERS -->
-    <ion-accordion value="user" toggleIcon="accordion-icon">
+    <ion-accordion *ngIf="users.length > 0" value="user" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="blueuser"></ion-icon>
         <ion-label>Users ({{users.length}})</ion-label>
@@ -326,7 +326,7 @@
     <ion-accordion *ngIf="salesListings.length> 0" value="salesListings"
       toggleIcon="accordion-icon">
       <ion-item slot="header">
-        <ion-icon name="sales_listing"></ion-icon>
+        <ion-icon name="sales"></ion-icon>
         <ion-label>Sales listings ({{salesListings.length}})</ion-label>
       </ion-item>
       <div slot="content">
@@ -335,12 +335,12 @@
             <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
 
               <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
-                <p class="itemforsale">Car Crashe into tree</p>
+                <p class="itemforsale">{{user['Title']}}</p>
                 <div>
-                  <p>There was a car crash on 26th street today when a car crashed into a tree at 9 AM...</p>
+                  <p>{{user['Description']}}</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">Luther Wilson</p>
+                  <p class="salesownername" style="margin-top: 10px; ">{{user['FirstName']}}</p>
                   <p class="posteddate" >1 day ago</p>
                 </div>
                
@@ -350,14 +350,14 @@
               <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
 
                 <img style="--border-radius: 20% !important;" 
-                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                  src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
             <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
               <div style="display: flex;">
-                <p class="miles">50 Miles Away</p>
+                <p class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -422,17 +422,17 @@
         <ion-label>Service Required ({{serviceRequired.length}})</ion-label>
       </ion-item>
       <div slot="content">
-        <div *ngFor="let user of salesListings;let i=index">
+        <div *ngFor="let user of serviceRequired;let i=index">
           <div class="lines-bottom ion-padding">
             <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
 
               <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
-                <p class="itemforsale">Car Crashe into tree</p>
+                <p class="itemforsale"> {{user['Title']}}</p>
                 <div>
-                  <p>There was a car crash on 26th street today when a car crashed into a tree at 9 AM...</p>
+                  <p>{{user['Description']}}</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">Luther Wilson</p>
+                  <p class="salesownername" style="margin-top: 10px; ">{{user['FirstName']}}</p>
                   <p class="posteddate" >1 day ago</p>
                 </div>
                
@@ -441,14 +441,14 @@
               <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
 
                 <img style="--border-radius: 20% !important;" 
-                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                  src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
             <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
               <div style="display: flex;">
-                <p class="miles">50 Miles Away</p>
+                <p class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -468,11 +468,11 @@
     <ion-accordion *ngIf="events.length> 0" value="events"
       toggleIcon="accordion-icon">
       <ion-item slot="header">
-        <ion-icon name="sales_listing"></ion-icon>
+        <ion-icon name="right-menu-events"></ion-icon>
         <ion-label>Events ({{events.length}})</ion-label>
       </ion-item>
       <div slot="content">
-        <div *ngFor="let user of salesListings;let i=index">
+        <div *ngFor="let user of events;let i=index">
           <div class="lines-bottom ion-padding">
             <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
 
@@ -482,7 +482,7 @@
                   <p>{{user['Description']}}</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">Luther Wilson</p>
+                  <p class="salesownername" style="margin-top: 10px; ">{{user['FirstName']}}</p>
                   <p class="posteddate" >1 day ago</p>
                 </div>
                
@@ -491,20 +491,20 @@
               <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
 
                 <img style="--border-radius: 20% !important;" 
-                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                  src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
-            <!-- <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+            <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
               <div style="display: flex;">
-                <p class="miles">50 Miles Away</p>
+                <p class="miles">{{user['Proximity']}} Miles Away</p>
               </div>
-              <div style="display: flex; justify-content:center; align-items: center; ">
+              <!-- <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                 (click)="viewUserOnMap(user)"></ion-icon>  
-              </div>
-            </div> -->
+              </div> -->
+            </div>
 
           </div>
         </div>
