--- a/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.html
+++ b/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.html
@@ -26,7 +26,7 @@
       <ion-row class="ion-align-items-center" (click)="viewItem(i.Id)">
         <ion-col size="4" >
           <!-- <ion-img [src]="appConstants.mediaPrefix+i.SalesItemImages[0]"></ion-img> -->
-          <img src="{{appConstants.mediaPrefix+i.SalesItemImages[0]}}" 
+          <img style="border-radius: 22px;" src="{{appConstants.mediaPrefix+i.SalesItemImages[0]}}" 
             onError="this.src='assets/custom-ion-icons/trait_thumnail.svg'"/>
         </ion-col>
         <ion-col size="8" >
@@ -89,7 +89,7 @@
     <ng-container *ngFor="let i of salesListingService.salesItemList; let j=index">
       <ion-row class="ion-align-items-center" (click)="viewItem(i.Id)" *ngIf="i.daysLeft < 0 && i.daysLeft > -8" >
         <ion-col size="4">
-          <ion-img  *ngIf="i.SalesItemImages[0].length>0" [src]="appConstants.mediaPrefix+i.SalesItemImages[0]">
+          <ion-img style="border-radius: 22px;"  *ngIf="i.SalesItemImages[0].length>0" [src]="appConstants.mediaPrefix+i.SalesItemImages[0]">
           </ion-img>
         </ion-col>
         <ion-col size="8">
@@ -107,11 +107,11 @@
               </ion-label>
               <ion-buttons>
                 <ion-button class="fi-delete-btn" shape="round" (click)="deleteItem(i) ; $event.stopPropagation();">
-                  <ion-icon style="font-size: 13px;" name="delete"></ion-icon>
+                  <ion-icon style="font-size: 16px;" name="delete"></ion-icon>
                 </ion-button>
                 &nbsp;
                 <ion-button class="fi-edit-btn" shape="round" (click)="editItem(i,j) ; $event.stopPropagation();">
-                  <ion-icon style="font-size: 13px;" name="edit"></ion-icon>
+                  <ion-icon style="font-size: 16px;" name="edit"></ion-icon>
                 </ion-button>
               </ion-buttons>
             </ion-card-content>
