--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -89,7 +89,7 @@
       <ion-grid value="all" *ngIf="loaded && postList && postList.length>0">
         <ion-row>
           <ion-col size="6" *ngFor="let post of postList" (click)="openPostScreen(post)">
-            <span *ngIf="post.BelongsToNodeName" class="fi-freeUser-nameTag">
+            <span *ngIf="post.BelongsToNodeName" class="fi-freeUser-nameTag traitBg">
               {{post.BelongsToNodeName}}
             </span>
             <div  *ngIf="post.PostImages && post.PostImages.length>0" class="whiteBg">
