--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
@@ -368,6 +368,7 @@ ion-modal {
 .postBg {
   background-color: #1976D2 !important;
   color: #ffffff;
+  z-index: 1;
 }
 
 .whiteBg{
@@ -381,4 +382,8 @@ ion-modal {
   font: normal normal 600 18px/24px SF Pro Display;
   letter-spacing: 0.22px;
   color: #285078;
+}
+
+.traitBg {
+z-index: 1;
 }
