--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -87,7 +87,7 @@
 
       </div>
     </div>
-    <div *ngIf="isLocationTurnedOn==false">
+    <div *ngIf="isLocationTurnedOn == false">
       <div class="permission-message">
         <p class="darkbf" style="margin-bottom: 0px;">To see places near you, turn on location services.</p>
         <p class="darkbf" style="margin-top: 9px;">You can also search friends with greetings.</p>
