--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -57,7 +57,7 @@
           <!-- <greeting-view *ngIf="currentItem.Greeting === 1"  [fromUserId]="user.UserId" [fromUserName]="currentItem.UserName"
           [fromUserProfile]="user.UserId + '/' + user.UserProfilePhoto" [userInfo]="user">
           </greeting-view> -->
-          <ion-icon *ngIf="currentItem.IsConnected === false" [name]="getGreetingIcon()" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <ion-icon *ngIf="currentItem.IsConnected === 0 " [name]="getGreetingIcon()" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <!-- <ion-icon *ngIf="currentItem.Greeting === 2 " name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <ion-icon *ngIf="currentItem.Greeting === 3 " name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <ion-icon *ngIf="currentItem.Greeting === 4 " name="greeting-blink" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
@@ -66,9 +66,9 @@
           <!-- removed onHold functionality -->
           <!-- <ion-icon name="onhold" style="font-size: 36px;" (click)="tempClick()"></ion-icon> -->
 
-          <ion-icon *ngIf="currentItem.IsConnected === false" name="send-connection-sonar-icon" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
+          <ion-icon *ngIf="currentItem.IsConnected === 0 " name="send-connection-sonar-icon" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
 
-          <div *ngIf="currentItem.IsConnected === true" class="chat">
+          <div *ngIf="currentItem.IsConnected === 1 " class="chat">
             <ion-icon name="chatwhite" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
             Chat Now
           </div>
@@ -203,7 +203,8 @@
         </div>
         <div style="display: flex; align-items: center; justify-content: center; gap: 10px;">
           <div >
-            <img class="userevent_namelogo" src="{{appConstants.mediaPrefix + (currentItem.ProfileImage || currentItem.Image)}}">
+            <img class="userevent_namelogo" src="{{appConstants.mediaPrefix + (currentItem.ProfileImage)}}"
+            onError="this.src='assets/icons/business/anonymous.svg'" >
           </div>
           <p *ngIf="currentItem.entity != 'U'" style="font-size: 21px; color: #1A3253;"> {{currentItem.FirstName}} {{currentItem.LastName}} </p>
           <!-- <p *ngIf="currentItem.entity =='SL' " style="font-size: 24px; color: #1A3253;">@{{currentItem.FirstName}}</p> -->
