--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -63,6 +63,7 @@
                       font: normal normal 600 18px/21px SF Pro Display;
                       letter-spacing: 0.29px;
                       color: #285078;
+                      margin-top: 5px;
                       opacity: 1;"
                     class="font-sz-14">
                     {{user['FirstName']}} {{user['LastName']}}
@@ -107,20 +108,62 @@
     </ion-accordion>
 
     <!-- BUSINESSES -->
-    <ion-accordion *ngIf="business.length > 0" value="business"
+    <!-- *ngIf="business.length > 0" -->
+    <ion-accordion  value="business"
       toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="bluebusiness"></ion-icon>
         <ion-label>Businesses ({{business.length}})</ion-label>
       </ion-item>
-      <div slot="content">
+      <div class="lines-bottom ion-padding" slot="content">
+        <div style="display: flex; justify-content: space-between;">
+          <div style="display: flex; gap: 7px; justify-content: center;">
+            <div>Img</div>
+            <div><p class="businessname">Toyota</p></div>
+          </div>
+          <div style="display: flex; align-items: center;">
+            <ion-icon name="chat-3dots"></ion-icon>
+          </div>
+        </div>
+
+        <div>
+          <p class="businessdiscription" style="width: 100%;">Toyota Motor Corporation is a Japanese multinational automotive manufacturer.</p>
+        </div>
+
+        <div style="display: flex;  width: 100%; justify-content: space-between;">
+          <div style="display:flex; gap: 20px;">
+            <div >
+              <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+            </div>
+            <div style="display: flex; justify-content:center; align-items: center; ">
+              <ion-icon name="view-on-map" style="font-size: 36px;"
+             ></ion-icon>  
+            </div>
+          </div>
+
+        
+            <div style="display: flex; align-items: center; justify-content: center;">
+            
+              <ion-button shape="round" size="small"
+                class="primary-button">
+                <ion-icon style="margin-right: 6px;" name="chaticoninchat" class="icon-40"
+                  ></ion-icon>
+                Chat now
+              </ion-button>
+            </div>
+
+       
+
+        </div>
+
+      </div>
+
+
+      <!-- <div slot="content">
         <div *ngFor="let user of business;let i=index">
           <div class="lines-bottom ion-padding">
             <div class="display-flex--row flex-align-center">
               <ion-avatar (click)="viewBusiness(user)" class="ion-margin-end">
-                <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
-                  onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
-                  alt="User Profile"> -->
                 <img class="user-logo-main"
                   src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
@@ -148,7 +191,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </ion-accordion>
 
     <!-- NON PROFITS -->
@@ -253,29 +296,30 @@
           <div class="lines-bottom ion-padding">
             <div  style="display: flex; justify-content: space-between;" class="display-flex--row flex-align-center">
 
-              <div style="display: flex; flex-direction: column; gap:10px;" class="font-primary-text" (click)="viewConnection(user)">
-                <p class="itemforsale">Car Crashe into tree</p>
+              <div style="display: flex; flex-direction: column; " class="font-primary-text" (click)="viewConnection(user)">
+                <p style="margin-top: 0px;" class="itemforsale">Car Crashe into tree</p>
                 <div>
-                  <p>There was a car crash on 26th street today when a car crashed into a tree at 9 AM...</p>
+                  <p style="margin: 7px 0px 7px 0px;">There was a car crash on 26th street today when a car crashed into a tree at 9 AM...</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">Luther Wilson</p>
-                  <p class="posteddate" >1 day ago</p>
+                  <p class="salesownername" style="margin: 0px; font-weight: bold;">{{user['FirstName']}}</p>
+                  <p class="posteddate" style="margin: 0px;">1 day ago</p>
                 </div>
                
                 
               </div>
-              <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
+              
+              <ion-avatar style="border-radius: 0px !important; width: 86px !important;" (click)="viewConnection(user)">
 
-                <img style="--border-radius: 20% !important;" 
-                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                <img style="--border-radius: 20% !important; width: 86px !important; height: 86px; max-width: unset; " 
+                  src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
-            <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+            <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p class="miles">50 Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -286,40 +330,7 @@
           </div>
         </div>
       </div>
-      <!-- <div slot="content">
-        <div *ngFor="let user of totems;let i=index">
-          <div class="lines-bottom ion-padding">
-            <div class="display-flex--row flex-align-center">
-              <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-              
-                <img class="user-logo-main"
-                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
-                  onError="this.src='assets/icons/business/anonymous.svg'" />
-              </ion-avatar>
-              <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
-              </div>
-            </div>
-
-            <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12"
-                style="width: 100%;text-align: center;">{{user['RangeInKm']|
-                number
-                : '1.2-2' }} Miles away </div>
-              <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;"
-                  (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']"
-                  [fromUserName]="user['DisplayName']"
-                  [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;"
-                  (click)="blockUser()"></ion-icon>
-                
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+     
     </ion-accordion>
 
     <!-- SALES LISTING -->
@@ -334,30 +345,31 @@
           <div class="lines-bottom ion-padding">
             <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
 
-              <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
-                <p class="itemforsale">{{user['Title']}}</p>
+              <div style="display: flex; flex-direction: column;  width: 230px;" class="font-primary-text " (click)="viewConnection(user)">
+                <p style="margin-top: 0px;" class="itemforsale">{{user['Title']}}</p>
+                <p style="margin-top: 7px; margin-bottom: 0px;">{{user['Price']}}</p>
                 <div>
-                  <p>{{user['Description']}}</p>
+                  <p style="margin: 7px 0px 7px 0px;">{{user['Description']}}</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">{{user['FirstName']}}</p>
-                  <p class="posteddate" >1 day ago</p>
+                  <p class="salesownername" style="margin: 0px; font-weight: bold;">{{user['FirstName']}}</p>
+                  <p class="posteddate" style="margin: 0px;">1 day ago</p>
                 </div>
                
                 
               </div>
               
-              <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
+              <ion-avatar style="border-radius: 0px !important; width: 86px !important;" (click)="viewConnection(user)">
 
-                <img style="--border-radius: 20% !important;" 
+                <img style="--border-radius: 20% !important; width: 86px !important; height: 86px; max-width: unset; " 
                   src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
-            <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+            <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p class="miles"> {{user['Proximity']}} Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -426,29 +438,29 @@
           <div class="lines-bottom ion-padding">
             <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
 
-              <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
-                <p class="itemforsale"> {{user['Title']}}</p>
+              <div style="display: flex; flex-direction: column; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
+                <p style="margin-top: 0px;" class="itemforsale"> {{user['Title']}}</p>
                 <div>
-                  <p>{{user['Description']}}</p>
+                  <p style="margin: 7px 0px 7px 0px;">{{user['Description']}}</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">{{user['FirstName']}}</p>
-                  <p class="posteddate" >1 day ago</p>
+                  <p class="salesownername" style="margin: 0px; font-weight: bold;">{{user['FirstName']}}</p>
+                  <p class="posteddate" style="margin: 0px;">1 day ago</p>
                 </div>
                
                 
               </div>
-              <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
+              <ion-avatar style="border-radius: 0px !important; width: 86px !important;"  (click)="viewConnection(user)">
 
-                <img style="--border-radius: 20% !important;" 
+                <img style="--border-radius: 20% !important; width: 86px !important; height: 86px; max-width: unset;" 
                   src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
-            <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+            <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p class="miles"> {{user['Proximity']}} Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -476,34 +488,35 @@
           <div class="lines-bottom ion-padding">
             <div  style="display: flex; justify-content: space-between; " class="display-flex--row flex-align-center">
 
-              <div style="display: flex; flex-direction: column; gap:10px; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
-                <p class="itemforsale">{{user['Title']}}</p>
+              <div style="display: flex; flex-direction: column; width: 250px;" class="font-primary-text " (click)="viewConnection(user)">
+                <p style="margin-top: 0px;" class="itemforsale">{{user['Title']}}</p>
                 <div>
-                  <p>{{user['Description']}}</p>
+                  <p style="margin: 7px 0px 7px 0px;">{{user['Description']}}</p>
                 </div>
                 <div style="display: flex; gap: 5px; text-align: center; ">
-                  <p class="salesownername" style="margin-top: 10px; ">{{user['FirstName']}}</p>
-                  <p class="posteddate" >1 day ago</p>
+                  <p class="salesownername" style="margin: 0px; font-weight: bold;">{{user['FirstName']}}</p>
+                  <p class="posteddate" style="margin: 0px;" >1 day ago</p>
                 </div>
                
                 
               </div>
-              <ion-avatar style="border-radius: 0px !important;" (click)="viewConnection(user)">
+              <ion-avatar style="border-radius: 0px !important; width: 86px !important;" (click)="viewConnection(user)">
 
-                <img style="--border-radius: 20% !important;" 
+                <img style="--border-radius: 20% !important; width: 86px !important; height: 86px; max-width: unset; " 
                   src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
             </div>
 
-            <div style="display: flex; gap: 10px; justify-content: space-between; width: 250px;">
+       
+            <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p class="miles">{{user['Proximity']}} Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
               </div>
-              <!-- <div style="display: flex; justify-content:center; align-items: center; ">
+              <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                 (click)="viewUserOnMap(user)"></ion-icon>  
-              </div> -->
+              </div>
             </div>
 
           </div>
