--- a/src/app/pages/map/viewing-users/viewing-users.component.html
+++ b/src/app/pages/map/viewing-users/viewing-users.component.html
@@ -40,7 +40,7 @@
     <ion-button class="activeclass" shape="round"
       [ngClass]="{'active': activeOrExpired === 2}"
       (click)="activeExpiredGreeting(2)">
-      Expired
+     Previous
     </ion-button>
   </div>
   
