--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -39,7 +39,7 @@
       <ion-avatar slot="start">
         <img src="assets/imgs/male.png" onError="this.src='assets/imgs/male.png'" />
       </ion-avatar>
-      <ion-label>
+      <ion-label (click)="navigateToGreeting()">
         <ion-card-title>Maggie Luther</ion-card-title>
         <ion-card-subtitle>Maggie Luther posted in her canvas</ion-card-subtitle>
         <ion-text>JAN-1-2021 6:13 PM</ion-text>
